--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -33,7 +33,7 @@ const formatDate = (dateStr?: string) => {
         <path d="M12 10v6"/>
         <path d="m9 13 3-3 3 3"/>
       </svg>
-      Projects
+      Selected Projects
     </h2>
 
     <div class="grid gap-4 md:grid-cols-2">
